--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
   }
