--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
     "react": "18.2.0",
+    "react-chessboard": "^4.0.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
