--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
+    "react-spinners": "^0.13.8",
     "recharts": "^2.7.2",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
