--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.32.6",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -22,7 +22,7 @@
     "react-chessboard": "^4.0.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
-    "react-redux": "^8.1.1",
+    "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
     "recharts": "^2.7.2",
     "typescript": "5.1.6",
