feat: add board and more data to analysis

--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
     "react": "18.2.0",
-    "react-chessboard": "^4.0.1",
+    "react-chess-analysis-board": "^0.0.19",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
     "recharts": "^2.7.3",
+    "sass": "^1.66.1",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
   },
