--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-slider": "^1.1.2",
     "@tanstack/react-query": "^4.32.6",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
